added client exp code + data

--- a/index.html
+++ b/index.html
@@ -1419,37 +1419,12 @@
                 <span class="close closebtn" onclick="javascript:closeDialog();">&times;</span>
             </div>
             <div class="modal-body">
-                <ul>
-                    <li>
-                        <a href="https://bubu-island.com/" class="projectLink" target="_blank" rel="noopener noreferer">Bubu Island</a>
-                    </li>
-                    <li>
-                        <a href="https://clubvet.com.tr/" class="projectLink" target="_blank" rel="noopener noreferer">Clubvet</a>
-                    </li>
-                    <li>
-                        <a href="https://athome.brightkidspreschool.com/" class="projectLink" target="_blank" rel="noopener noreferer">BrightKids</a>
-                    </li>
-                    <li>
-                        <a href="https://mars.com/" class="projectLink" target="_blank" rel="noopener noreferer">Mars</a>
-                    </li>
-                    <li>
-                        <a href="https://iams.com/" class="projectLink" target="_blank" rel="noopener noreferer">Iams</a>
-                    </li>
-                    <li>
-                        <a href="https://sheba.com/" class="projectLink" target="_blank" rel="noopener noreferer">Sheba</a>
-                    </li>
-                    <li>
-                        <a href="https://apple.com/" class="projectLink" target="_blank" rel="noopener noreferer">Apple</a>
-                    </li>
-                    <li>
-                        <a href="https://lvmh.com/" class="projectLink" target="_blank" rel="noopener noreferer">LVMH</a>
-                    </li>
-                    <li>
-                        <a href="https://pumaenergy.com/" class="projectLink" target="_blank" rel="noopener noreferer">Puma Energy</a>
-                    </li>
-                    <li>
-                        <a href="https://mainfreight.com/" class="projectLink" target="_blank" rel="noopener noreferer">Mainfreight NZ</a>
-                    </li>
+                <ul id="clientExp-data">
+
+                    <!-- <li>
+                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                    </li> -->
+
                 </ul>
             </div>
             <div class="modal-footer">
