added web samples code +  data

--- a/index.html
+++ b/index.html
@@ -1439,8 +1439,9 @@
                 <span class="close closebtn" onclick="javascript:closeDialog();">&times;</span>
             </div>
             <div class="modal-body">
-                <ul>
-                    <li>
+                <ul id="webSamples-data">
+
+                    <!-- <li>
                         <a href="https://zaynejaz.github.io/ " class="projectLink" target="_blank" rel="noopener noreferer">Zayn Ejaz | GitHub Pages</a>
                         <a href="https://github.com/zaynejaz/zaynejaz.github.io" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
                     </li>
@@ -1451,7 +1452,8 @@
                     <li>
                         <a href="https://ze-skulpt.netlify.app/" class="projectLink" target="_blank" rel="noopener noreferer">Skulpt</a>
                         <a href="https://github.com/zaynejaz/Skulpt" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
+                    </li> -->
+
                 </ul>
             </div>
             <div class="modal-footer">
