added ux ui code +. data

--- a/index.html
+++ b/index.html
@@ -1602,8 +1602,8 @@
                 <span class="close closebtn" onclick="javascript:closeDialog();">&times;</span>
             </div>
             <div class="modal-body">
-                <ul>
-                    <li>
+                <ul id="uxuiProto-data">
+                    <!-- <li>
                         <a href="https://www.behance.net/gallery/90915067/Revitalize-Architecture" class="projectLink" target="_blank" rel="noopener noreferer">Revitalize Architecture: Website Hero</a>
                     </li>
                     <li>
@@ -1635,7 +1635,7 @@
                     </li>
                     <li>
                         <a href="https://www.behance.net/gallery/90689421/ATTORNEY-DIETRICH-KLEIN" class="projectLink" target="_blank" rel="noopener noreferer">Dietrich Klein: Homepage</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <div class="modal-footer">
