added PWA code + data

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 
             <section id="project-section" class="controls">
                 <h2 id="projectLab">Project Lab</h2>
-                <ul slass="multiModal-contents">
+                <ul class="multiModal-contents">
                     <!-- portfolio site link -->
 
                     <li>
@@ -1442,16 +1442,8 @@
                 <ul id="webSamples-data">
 
                     <!-- <li>
-                        <a href="https://zaynejaz.github.io/ " class="projectLink" target="_blank" rel="noopener noreferer">Zayn Ejaz | GitHub Pages</a>
-                        <a href="https://github.com/zaynejaz/zaynejaz.github.io" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
-                        <a href="https://ze-casablanca.netlify.app/ " class="projectLink" target="_blank" rel="noopener noreferer">Casablanca</a>
-                        <a href="https://github.com/zaynejaz/Casablanca" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
-                        <a href="https://ze-skulpt.netlify.app/" class="projectLink" target="_blank" rel="noopener noreferer">Skulpt</a>
-                        <a href="https://github.com/zaynejaz/Skulpt" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
+                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
+                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer"></a>
                     </li> -->
 
                 </ul>
@@ -1507,26 +1499,6 @@
         </div>
     </section>
 
-    <!-- <section id="modal-camp" class="multiModal-popup">
-        <div class="modal-content">
-
-            <div class="modal-header">
-                <span class="close closebtn" onclick="javascript:closeDialog();">&times;</span>
-            </div>
-            <div class="modal-body">
-                <ul>
-                    <li>
-                        <a href="https://ze-casablanca.netlify.app/ " class="projectLink" target="_blank" rel="noopener noreferer">Casablanca</a>
-                        <a href="https://github.com/zaynejaz/Casablanca" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="modal-footer">
-                <h6>Email Campaigns<br>with a focus on CTOR</h6>
-            </div>
-        </div>
-    </section> -->
-
     <section id="modal-pwa" class="multiModal-popup">
         <div class="modal-content">
 
@@ -1534,60 +1506,16 @@
                 <span class="close closebtn" onclick="javascript:closeDialog();">&times;</span>
             </div>
             <div class="modal-body">
-                <ul>
-                    <li>
-                        <a href="https://zaynejaz.github.io/randomQuoteGenerator/" class="projectLink" target="_blank" rel="noopener noreferer">Random Quote Generator</a>
-                        <a href="https://github.com/zaynejaz/randomQuoteGenerator" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <!-- <li>
-                        <a href="#" class="projectLink" target="_blank" rel="noopener noreferer">Tic Tac Toe</a>
-                        <a href="https://github.com/zaynejaz/bk-tictactoe" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li> -->
-                    <li>
-                        <a href="https://ze-webapps.netlify.app/js%20web%20app-weather%20app%20-%20wthr/wthr" class="projectLink" target="_blank" rel="noopener noreferer">Weather App</a>
-                        <a href="https://github.com/zaynejaz/WebApps/tree/master/JS%20Web%20App-Weather%20App%20-%20WTHR" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
-                        <a href="https://ze-webapps.netlify.app/js%20web%20app-quiz%20app%20-%20kwizzr/kwizzr" class="projectLink" target="_blank" rel="noopener noreferer">Quiz App</a>
-                        <a href="https://github.com/zaynejaz/WebApps/tree/master/JS%20Web%20App-Quiz%20App%20-%20KWIZZR" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
-                        <a href="https://ze-webapps.netlify.app/js%20web%20app-text%20analyzer%20-%20searcher/searcher" class="projectLink" target="_blank" rel="noopener noreferer">Book Library</a>
-                        <a href="https://github.com/zaynejaz/WebApps/tree/master/JS%20Web%20App-Text%20Analyzer%20-%20SEARCHER" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
-                        <a href="https://ze-arithmetica.netlify.app/" class="projectLink" target="_blank" rel="noopener noreferer">Voice Budget Tracker</a>
-                        <a href="https://github.com/zaynejaz/react-budget-tracker" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
-                        <a href="https://zaynejaz.github.io/react-todo-list-app/" class="projectLink" target="_blank" rel="noopener noreferer">To Do List</a>
-                        <a href="https://github.com/zaynejaz/react-todo-list-app" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
-                        <a href="https://zaynejaz.github.io/react-calculator/" class="projectLink" target="_blank" rel="noopener noreferer">Calculator</a>
-                        <a href="https://github.com/zaynejaz/react-calculator" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
-                        <a href="https://zaynejaz.github.io/currency-converter/" class="projectLink" target="_blank" rel="noopener noreferer">Currency Converter</a>
-                        <a href="https://github.com/zaynejaz/currency-converter" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
-                        <a href="https://react-next-crypto-price-tracker.vercel.app/" class="projectLink" target="_blank" rel="noopener noreferer">Crypto Price Tracker</a>
-                        <a href="https://github.com/zaynejaz/react-next-crypto-price-tracker" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
-                        <a href="https://ze-qrcode.netlify.app/" class="projectLink" target="_blank" rel="noopener noreferer">QR Code Generator</a>
-                        <a href="https://github.com/zaynejaz/react-qrcode" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
-                    <li>
-                        <a href="https://ze-hyperion.netlify.app/" class="projectLink" target="_blank" rel="noopener noreferer">Web 3.0 Blockchain App</a>
-                        <a href="https://github.com/zaynejaz/react-blockchain-app" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li>
+
+                <ul id="pwa-data">
+
                     <!-- <li>
                         <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
-                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer">view code</a>
-                    </li> -->
+                        <a href="" class="codeLink" target="_blank" rel="noopener noreferer"></a>
+                    </li>  -->
+                   
                 </ul>
+
             </div>
             <div class="modal-footer">
                 <h6>Progressive<br>Web Applications</h6>
@@ -1603,39 +1531,11 @@
             </div>
             <div class="modal-body">
                 <ul id="uxuiProto-data">
+
                     <!-- <li>
-                        <a href="https://www.behance.net/gallery/90915067/Revitalize-Architecture" class="projectLink" target="_blank" rel="noopener noreferer">Revitalize Architecture: Website Hero</a>
-                    </li>
-                    <li>
-                        <a href="https://www.behance.net/gallery/90914997/BONBON-Chocolatiers" class="projectLink" target="_blank" rel="noopener noreferer">Bon Bon: Website Hero</a>
-                    </li>
-                    <li>
-                        <a href="https://www.behance.net/gallery/90914897/Monaco-Beach-Club" class="projectLink" target="_blank" rel="noopener noreferer">Monaco Beach Club: Website Hero</a>
-                    </li>
-                    <li>
-                        <a href="https://www.behance.net/gallery/90914751/ZEN-YOGA" class="projectLink" target="_blank" rel="noopener noreferer">Zen Yoga: Website Hero</a>
-                    </li>
-                    <li>
-                        <a href="https://www.behance.net/gallery/90914663/ELATEholidays" class="projectLink" target="_blank" rel="noopener noreferer">Elate Holidays: Website Hero</a>
-                    </li>
-                    <li>
-                        <a href="https://www.behance.net/gallery/90690749/Digital-Agency-Eclectic-Loft" class="projectLink" target="_blank" rel="noopener noreferer">The Eclectic Loft: Homepage</a>
-                    </li>
-                    <li>
-                        <a href="https://www.behance.net/gallery/90690591/Attorney-Russo" class="projectLink" target="_blank" rel="noopener noreferer">Russo: Homepage</a>
-                    </li>
-                    <li>
-                        <a href="https://www.behance.net/gallery/90690327/Consultancy-AnalytIQ" class="projectLink" target="_blank" rel="noopener noreferer">AnalytIQ: Homepage</a>
-                    </li>
-                    <li>
-                        <a href="https://www.behance.net/gallery/90690199/Product-Opulent" class="projectLink" target="_blank" rel="noopener noreferer">Opulent: Homepage</a>
-                    </li>
-                    <li>
-                        <a href="https://www.behance.net/gallery/90689901/Medical-Medicare" class="projectLink" target="_blank" rel="noopener noreferer">MediCare Group: Homepage</a>
-                    </li>
-                    <li>
-                        <a href="https://www.behance.net/gallery/90689421/ATTORNEY-DIETRICH-KLEIN" class="projectLink" target="_blank" rel="noopener noreferer">Dietrich Klein: Homepage</a>
+                        <a href="" class="projectLink" target="_blank" rel="noopener noreferer"></a>
                     </li> -->
+
                 </ul>
             </div>
             <div class="modal-footer">
