corected page scripts + styling + keywords

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="description" content="Email and Web Developer. I give small businesses Affordable Solutions that boosts their Online Appearance and Increases Their Revenue, FAST!">
-    <meta name="keywords" content="HTML, CSS, JavaScript, JS, SASS, PHP, Bootstrap, Zayn Ejaz, Zayn, Ejaz, SQL, mySQL, handlebars, zurb, email, web, developer, foundation, npm, git, wordpress, moodle, adobe, adobe cc, photoshop, illustrator, adobe xd, litmus, mailchimp, salesforce, react, crm, marketing, freelance, contact">
+    <meta name="keywords" content="HTML, CSS, JavaScript, JS, Ruby, SASS, PHP, Bootstrap, Zayn Ejaz, Zayn, Ejaz, SQL, mySQL, react, tailwind, tailwindcss, zurb, email, web, developer, foundation, npm, git, wordpress, moodle, adobe, adobe cc, creative cloud, photoshop, illustrator, adobe xd, litmus, mailchimp, salesforce, crm, marketing, freelance, contact, email developer, experienced, html email, email marketing, ui, ux, ui/ux">
     <meta name="author" content="Zayn Ejaz">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
@@ -56,41 +56,6 @@
 		gtag('config', 'UA-156484615-1');
 	</script>
 
-
-    <script>
-        function modalClient() {
-            multiModal.show( "#modal-client" );
-            projectModalActive();
-        }
-        function modalWebsite() {
-            multiModal.show( "#modal-website" );
-            projectModalActive();
-        }
-        function modalEmail() {
-            multiModal.show( "#modal-email" );
-            projectModalActive();
-        }
-        function modalLP() {
-            multiModal.show( "#modal-lp" );
-            projectModalActive();
-        }
-        // function modalCamp() {
-        //     multiModal.show( "#modal-camp" );
-        //     projectModalActive();
-        // }
-        function modalPwa() {
-            multiModal.show( "#modal-pwa" );
-            projectModalActive();
-        }
-        function modalProto() {
-            multiModal.show( "#modal-proto" );
-            projectModalActive();
-        }
-        function closeDialog() {
-            multiModal.hide();
-            projectModalInactive();
-        }
-    </script>
 </head>
 
 <body>
@@ -981,11 +946,6 @@
     </div>
 
 
-<style>
-    .hideFooter{display:none;}
-    .showFooter{display:inline;}
-</style>
-
     <footer id="footer-contact-section">
         <div class="container contact-container">
             <div class="row contactLinks">
@@ -1217,7 +1177,7 @@
 
 
                             <div class="form-head">
-                                <a class="navbar-brand" href="https://zaynejaz.com/">
+                                <a class="navbar-brand" href="javascript:void(0)">
                                     <img src="/assets/images/logos/Zayn-Ejaz.gif" alt="zayn ejaz logo gif" />
                                     <img src="/assets/images/logos/xox-line.gif" class="xoxLoading" alt="xo loading gif" />
                                 </a>
@@ -1621,4 +1581,3 @@
 
 <!-- https://codepen.io/prakhar625/pen/zddKRj -->
 <!-- https://medium.com/@mag_ops/music-visualiser-with-three-js-web-audio-api-b30175e7b5ba -->
-<!-- https://codepen.io/IanRamosC/pen/MbJNmd -->
