--- a/index.html
+++ b/index.html
@@ -1554,7 +1554,7 @@
     <!-- fallback -->
     <script>window.Popper || document.write('<script src="assets/js/vendor/popper.min.js"><\/script>')</script>
     <!-- GSAP -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
     <!-- Dynamics JS-->
     <script src="assets/js/dynamics.js"></script>
     <!-- TinyColor JS-->
